# tasker

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: ci-cd.yaml
backend/: CMakeLists.txt
backend/include/: app.h  cass.h  db.h
backend/src/: app.cpp  cass.cpp  db.cpp  main.cpp
crdt/: README.md  lww_register.h  merge_strategy.cpp  merge_strategy.h  or_set.h
db/cassandra/: README.md  schema.cql  seed.cql
db/mongo/: README.md  init.js  schema.json
frontend/: package-lock.json  package.json  tsconfig.app.json
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  Layout.tsx  NotificationToast.tsx  RoleGate.tsx  SyncIndicator.tsx  TaskDetail.tsx  TaskForm.tsx  TaskList.tsx  TaskStatusBadge.tsx  TaskTimeline.tsx
frontend/src/hooks/: useOfflineSync.ts  useTaskEvents.ts  useUserRole.ts  useWebSocket.ts
frontend/src/services/: api.ts  eventService.ts  taskService.ts  userService.ts
helm/charts/: charts.yaml  values.yaml
k8s/base/: cassandra.yaml  deployment.yaml  kustomization.yaml  mongo.yaml  namespace.yaml  rocketmq.yaml  service.yaml
k8s/overlays/dev/: kustomization.yaml
k8s/overlays/prod/: kustomization.yaml
k8s/overlays/staging/: kustomization.yaml
observability/: docker-compose.yaml
observability/grafana/: dashboard-config.yaml
observability/grafana/dashboards/: task-overview.json
observability/prometheus/: alert.rules  prometheus.yaml
queue/rocketmq_config/: README.md  exporter-deployment.yaml  rocketmq-console.yaml  service.yaml
workers/: README.md  event_processor.cpp  notifier.cpp  task_sla_checker.cpp
